# surfaceflinger_hook

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  buildOnTermux.sh  makefile
hookLib/: hooklib.cpp  log.hpp
inject/include/: PtraceInject.h
inject/include/Utils/: PtraceUtils.h  Utils.h
module/: customize.sh  module.prop  service.sh
scripts/: install_hook.sh  sepolicy.rule
src/: analyze.rs  connect.rs  error.rs  fps.rs  hook.rs  lib.rs  utils.rs
src/connect/: bound.rs  input.rs  mod.rs
src/utils/: fps.rs  frametime.rs  mod.rs
