[package]
name = "sufaceflinger_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13.3"
dobby-sys = { git = "https://github.com/lanylow/dobby-sys.git" }
log = "0.4.19"
memmap2 = "0.7.1"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'
