[package]
name = "surfaceflinger_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dobby-api = "0.1.4"
goblin = { version = "0.7.1", features = ["elf64", "alloc"] }
log = "0.4.20"
android_logger = "0.13.3"
thiserror = "1.0.47"
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'
